fixed header spacing

--- a/css/Samm.css
+++ b/css/Samm.css
@@ -1,6 +1,6 @@
 h1 {
   line-height: 100px;
-  padding-left: 2.5rem;
+  padding-left: 1.5rem;
   padding-top: 1rem;
   font-size: 50px;
 }
